2020-09-31   3.1.0:
-------------------
  * COMMON:
    - New platform selectors: s390x, osx-arm64
    - Added the ability to build installers from an existing,
      instantiated environment or an environment.yml spec.
    - Added conda_channel_alias and condarc options to allow
      more complete customization of the installed .condarc
    - Added options to all install types to preserve the
      package cache after installation
    - Migrated CI to GitHub Actions and added installation/
      unpack testing of generated installers

  * SHELL:
    - Pre- and post-install scripts are now executed directly
      if a shebang is present; otherwise they are run by the
      POSIX shell `sh`.

  * NSIS:
    - Support for pre-install script
    - Added the ability to check if the path length is longer
      than 46 characters, so that nodejs package contents will
      not exceed a path length of 260 characters.

  * PKG:
    - Added an "all" installer type option to support building
      both .pkg and .sh installers with a single commmand

2019-09-16   3.0.1:
-------------------
  * COMMON:
    - Add dependency on standalone conda executable

2019-08-09   3.0.0:
-------------------
  * COMMON:
    - this utilizes a fundamentally different approach from before.  A standalone
      conda executable (created with pyinstaller) is used to create environments
      from packages that are shipped with the installers. This allows full support
      for everything that is supported by the standalone conda.  It does add some
      complexity in terms of menu creation and other operations that rely on
      knowing whether the env in use (the temporary env for the standalone exe) is
      the base env.  Let's call those prefix-based operations.

2019-11-04   2.3.0:
-------------------
  * COMMON:
    - Drop redundant code in install.py
    - Fix bug in size computation for pkgs built with older conda build

  * NSIS:
    - Allow configuring the uninstaller name