@@ -89,7 +89,8 @@ def main_build(dir_path, output_dir='.', platform=cc_platform,
             info[key] = info['name']
 
     for key in ('license_file', 'welcome_image', 'header_image', 'icon_image',
-                'pre_install', 'post_install', 'pre_uninstall', 'environment_file'):
+                'pre_install', 'post_install', 'pre_uninstall', 'environment_file',
+                'nsis_template'):
         if key in info:
             info[key] = abspath(join(dir_path, info[key]))
 
